fase3/implementacion(1)/c_ast_descendente/AnalizadorSintacticoTiny.java
/* AnalizadorSintacticoTiny.java */
/* Generated By:JavaCC: Do not edit this line. AnalizadorSintacticoTiny.java */
package c_ast_descendente;
import asint.ClaseSemanticaTiny;
import errors.GestionErroresTiny;
import asint.SintaxisAbstractaTiny.Bloq;
import asint.SintaxisAbstractaTiny.SecDecs;
import asint.SintaxisAbstractaTiny.LDecs;
import asint.SintaxisAbstractaTiny.Dec;
import asint.SintaxisAbstractaTiny.SecIs;
import asint.SintaxisAbstractaTiny.LIs;
import asint.SintaxisAbstractaTiny.I;
import asint.SintaxisAbstractaTiny.ParamFs;
import asint.SintaxisAbstractaTiny.LParamFs;
import asint.SintaxisAbstractaTiny.ParamF;
import asint.SintaxisAbstractaTiny.ParamRs;
import asint.SintaxisAbstractaTiny.LParamRs;
import asint.SintaxisAbstractaTiny.LCampos;
import asint.SintaxisAbstractaTiny.TipoNom;
import asint.SintaxisAbstractaTiny.Tipo;
import asint.SintaxisAbstractaTiny.Exp;

public class AnalizadorSintacticoTiny implements AnalizadorSintacticoTinyConstants {
   private ClaseSemanticaTiny sem = new ClaseSemanticaTiny();

  final public Bloq analiza() throws ParseException {
    trace_call("analiza");
    try {
Bloq prog;
      prog = bloque();
      jj_consume_token(0);
{if ("" != null) return prog;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("analiza");
    }
}

  final public Bloq bloque() throws ParseException {
    trace_call("bloque");
    try {
SecDecs secdecs; SecIs secis;
      jj_consume_token(llaveApert);
      secdecs = seccion_declaraciones_opt();
      secis = seccion_instrucciones_opt();
      jj_consume_token(llaveCierre);
{if ("" != null) return sem.bloq(secdecs, secis);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("bloque");
    }
}

  final public SecDecs seccion_declaraciones_opt() throws ParseException {
    trace_call("seccion_declaraciones_opt");
    try {
LDecs ldecs;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case bool:
      case INT:
      case real:
      case string:
      case proc:
      case struct:
      case type:
      case identificador:
      case indireccion:{
        ldecs = seccion_declaraciones();
        jj_consume_token(finalAsig);
{if ("" != null) return sem.si_decs(ldecs);}
        break;
        }
      default:
        jj_la1[0] = jj_gen;
{if ("" != null) return sem.no_decs();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("seccion_declaraciones_opt");
    }
}

  final public LDecs seccion_declaraciones() throws ParseException {
    trace_call("seccion_declaraciones");
    try {
Dec dec; LDecs r;
      dec = declaracion();
      r = resto_sd(sem.una_dec(dec));
{if ("" != null) return r;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("seccion_declaraciones");
    }
}

  final public LDecs resto_sd(LDecs rh) throws ParseException {
    trace_call("resto_sd");
    try {
Dec dec; LDecs r;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case puntoComa:{
        jj_consume_token(puntoComa);
        dec = declaracion();
        r = resto_sd(sem.muchas_decs(rh, dec));
{if ("" != null) return r;}
        break;
        }
      default:
        jj_la1[1] = jj_gen;
{if ("" != null) return rh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("resto_sd");
    }
}

  final public Dec declaracion() throws ParseException {
    trace_call("declaracion");
    try {
TipoNom tiponom; Token id; ParamFs p; Bloq bloq;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case bool:
      case INT:
      case real:
      case string:
      case struct:
      case identificador:
      case indireccion:{
        tiponom = tipo_nombre();
{if ("" != null) return (Dec)sem.dec_base(tiponom);}
        break;
        }
      case type:{
        jj_consume_token(type);
        tiponom = tipo_nombre();
{if ("" != null) return (Dec)sem.dec_type(tiponom);}
        break;
        }
      case proc:{
        jj_consume_token(proc);
        id = jj_consume_token(identificador);
        p = parametros_formales();
        bloq = bloque();
{if ("" != null) return (Dec)sem.dec_proc(id.image, p, bloq).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion");
    }
}

  final public ParamFs parametros_formales() throws ParseException {
    trace_call("parametros_formales");
    try {
ParamFs p;
      jj_consume_token(parenApert);
      p = lista_parametros_opt();
      jj_consume_token(parenCierre);
{if ("" != null) return p;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametros_formales");
    }
}

  final public ParamFs lista_parametros_opt() throws ParseException {
    trace_call("lista_parametros_opt");
    try {
LParamFs lp;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case bool:
      case INT:
      case real:
      case string:
      case struct:
      case identificador:
      case indireccion:{
        lp = lista_parametros();
{if ("" != null) return (ParamFs)sem.si_params_f(lp);}
        break;
        }
      default:
        jj_la1[3] = jj_gen;
{if ("" != null) return (ParamFs)sem.no_params_f();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_parametros_opt");
    }
}

  final public LParamFs lista_parametros() throws ParseException {
    trace_call("lista_parametros");
    try {
LParamFs lp; ParamF p;
      p = parametro();
      lp = resto_lp(sem.un_param_f(p));
{if ("" != null) return lp;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_parametros");
    }
}

  final public LParamFs resto_lp(LParamFs rh) throws ParseException {
    trace_call("resto_lp");
    try {
LParamFs lp; ParamF p;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case coma:{
        jj_consume_token(coma);
        p = parametro();
        lp = resto_lp(sem.muchos_params_f(rh, p));
{if ("" != null) return lp;}
        break;
        }
      default:
        jj_la1[4] = jj_gen;
{if ("" != null) return rh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("resto_lp");
    }
}

  final public ParamF parametro() throws ParseException {
    trace_call("parametro");
    try {
Tipo t; ParamF r;
      t = tipo();
      r = resto_parametro(t);
{if ("" != null) return r;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametro");
    }
}

  final public ParamF resto_parametro(Tipo th) throws ParseException {
    trace_call("resto_parametro");
    try {
Token id;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case paramRef:{
        jj_consume_token(paramRef);
        id = jj_consume_token(identificador);
{if ("" != null) return (ParamF)sem.si_refparam_f(th, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      case identificador:{
        id = jj_consume_token(identificador);
{if ("" != null) return (ParamF)sem.no_refparam_f(th, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("resto_parametro");
    }
}

  final public TipoNom tipo_nombre() throws ParseException {
    trace_call("tipo_nombre");
    try {
Tipo t; Token id;
      t = tipo();
      id = jj_consume_token(identificador);
{if ("" != null) return (TipoNom)sem.tipo_nombre(t, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo_nombre");
    }
}

  final public Tipo tipo() throws ParseException {
    trace_call("tipo");
    try {
Tipo t;
      t = tipo0();
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo");
    }
}

  final public Tipo tipo0() throws ParseException {
    trace_call("tipo0");
    try {
Tipo t; Tipo r;
      t = tipo1();
      r = resto_tipo0(t);
{if ("" != null) return r;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo0");
    }
}

  final public Tipo resto_tipo0(Tipo th) throws ParseException {
    trace_call("resto_tipo0");
    try {
Tipo r; Token id;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case corcheteApert:{
        jj_consume_token(corcheteApert);
        id = jj_consume_token(literalEntero);
        jj_consume_token(corcheteCierre);
        r = resto_tipo0((Tipo)sem.tipo_array(th, id.image).ponFila(id.beginLine).ponCol(id.beginColumn));
{if ("" != null) return r;}
        break;
        }
      default:
        jj_la1[6] = jj_gen;
{if ("" != null) return th;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("resto_tipo0");
    }
}

  final public Tipo tipo1() throws ParseException {
    trace_call("tipo1");
    try {
Tipo t;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case indireccion:{
        jj_consume_token(indireccion);
        t = tipo1();
{if ("" != null) return (Tipo)sem.tipo_indir(t);}
        break;
        }
      case bool:
      case INT:
      case real:
      case string:
      case struct:
      case identificador:{
        t = tipo_base();
{if ("" != null) return t;}
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo1");
    }
}

  final public Tipo tipo_base() throws ParseException {
    trace_call("tipo_base");
    try {
LCampos lc; Token id;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case struct:{
        jj_consume_token(struct);
        jj_consume_token(llaveApert);
        lc = lista_campos();
        jj_consume_token(llaveCierre);
{if ("" != null) return (Tipo)sem.tipo_struct(lc);}
        break;
        }
      case INT:{
        jj_consume_token(INT);
{if ("" != null) return (Tipo)sem.tipo_int();}
        break;
        }
      case real:{
        jj_consume_token(real);
{if ("" != null) return (Tipo)sem.tipo_real();}
        break;
        }
      case bool:{
        jj_consume_token(bool);
{if ("" != null) return (Tipo)sem.tipo_bool();}
        break;
        }
      case string:{
        jj_consume_token(string);
{if ("" != null) return (Tipo)sem.tipo_string();}
        break;
        }
      case identificador:{
        id = jj_consume_token(identificador);
{if ("" != null) return (Tipo)sem.tipo_type(id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo_base");
    }
}

  final public LCampos lista_campos() throws ParseException {
    trace_call("lista_campos");
    try {
TipoNom t; LCampos r;
      t = tipo_nombre();
      r = resto_lc(sem.un_campo(t));
{if ("" != null) return r;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_campos");
    }
}

  final public LCampos resto_lc(LCampos th) throws ParseException {
    trace_call("resto_lc");
    try {
TipoNom t; LCampos r;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case coma:{
        jj_consume_token(coma);
        t = tipo_nombre();
        r = resto_lc(sem.muchos_campos(th, t));
{if ("" != null) return r;}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
{if ("" != null) return th;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("resto_lc");
    }
}

  final public SecIs seccion_instrucciones_opt() throws ParseException {
    trace_call("seccion_instrucciones_opt");
    try {
LIs secis;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case NEW:
      case delete:
      case read:
      case write:
      case nl:
      case call:
      case llaveApert:
      case arroba:{
        secis = seccion_instrucciones();
{if ("" != null) return (SecIs)sem.si_ins(secis);}
        break;
        }
      default:
        jj_la1[10] = jj_gen;
{if ("" != null) return (SecIs)sem.no_ins();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("seccion_instrucciones_opt");
    }
}

  final public LIs seccion_instrucciones() throws ParseException {
    trace_call("seccion_instrucciones");
    try {
LIs lis;
      lis = lista_instrucciones();
{if ("" != null) return lis;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("seccion_instrucciones");
    }
}

  final public LIs lista_instrucciones() throws ParseException {
    trace_call("lista_instrucciones");
    try {
I i; LIs lis;
      i = instruccion();
      lis = resto_li(sem.una_ins(i));
{if ("" != null) return lis;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_instrucciones");
    }
}

  final public LIs resto_li(LIs lh) throws ParseException {
    trace_call("resto_li");
    try {
I i; LIs lis;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case puntoComa:{
        jj_consume_token(puntoComa);
        i = instruccion();
        lis = resto_li(sem.muchas_ins(lh, i));
{if ("" != null) return lis;}
        break;
        }
      default:
        jj_la1[11] = jj_gen;
{if ("" != null) return lh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("resto_li");
    }
}
